cabal-version: 2.4

-- TODO rename to indicate this is unix-only
name: subpross
version: 0

library
  build-depends:
    base,
    bytestring,
    ki,
    process,
    stm,
    text,
    unix,
  default-extensions:
    BlockArguments
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    KindSignatures
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
  default-language: Haskell2010
  exposed-modules: Subpross
  ghc-options: -Wall
  hs-source-dirs: src
