cabal-version: 2.4

-- TODO rename to indicate this is unix-only
name: subpross
version: 0

library
  build-depends:
    base,
    bytestring,
    foldl,
    ki,
    process,
    stm,
    text,
    unix,
  default-extensions:
    BlockArguments
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    KindSignatures
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeApplications
  default-language: Haskell2010
  exposed-modules:
    Pipe
    Subpross
  ghc-options: -Wall
  hs-source-dirs: src
  other-modules:
    Event
    H
    Prism
